[package]
name = "blackjack_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-lang-nursery/rand" }

[[bin]]
name = "build_strat"
path = "src/main.rs"

[[bin]]
name = "play_normal"
path = "src/play_normal.rs"

[[bin]]
name = "play_counted"
path = "src/play_counted.rs"

[[bin]]
name = "play_performance"
path = "src/play_performance.rs"