[package]
name = "blackjack_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-lang-nursery/rand" }
clap = "2.33.3"
threadpool = "1.0"
actix-web = "3.3.2"
serde = "1.0"
serde_json = "1.0"

[[bin]]
name = "play_normal"
path = "src/play_normal.rs"

[[bin]]
name = "play_counted"
path = "src/play_counted.rs"

[[bin]]
name = "play_performance"
path = "src/play_performance.rs"

[[bin]]
name = "play_counted_performance"
path = "src/play_counted_performance.rs"

[[bin]]
name = "play_cli_game"
path = "src/play_cli_game.rs"

[[bin]]
name = "server"
path = "src/service/routes.rs"