[package]
name = "blackjack_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.8.4", features = ["std_rng"] }
clap = "2.33.3"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
ratatui = "0.27.0"

[dev-dependencies]
reqwest = { version = "0.12.2", features = ["json"] }

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "play_normal"
path = "src/play_normal.rs"

[[bin]]
name = "play_counted"
path = "src/play_counted.rs"

[[bin]]
name = "play_performance"
path = "src/play_performance.rs"

[[bin]]
name = "play_counted_performance"
path = "src/play_counted_performance.rs"

[[bin]]
name = "play_cli_game"
path = "src/play_cli_game.rs"

[[bin]]
name = "play_channel_game"
path = "src/play_channel_game.rs"

[[bin]]
name = "play_ratatui"
path = "src/play_ratatui.rs"

[[bin]]
name = "server"
path = "src/server.rs"
